first version of basic service registration via a Registrar

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,3 +30,6 @@ linters-settings:
     errorf: false
   misspell:
     locale: US
+  gosec:
+    excludes:
+      - G404 # we don't need secure random numbers
