--- a/REUSE.toml
+++ b/REUSE.toml
@@ -6,47 +6,53 @@ SPDX-PackageDownloadLocation = "https://github.com/xmidt-org/praetor"
 [[annotations]]
 path = "NOTICE"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = ".gitignore"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = ".whitesource"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = "CONTRIBUTING.md"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = "MAINTAINERS.md"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = "README.md"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = "go.mod"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = "go.sum"
 precedence = "aggregate"
-SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = "praetorsd/status_string.go"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
 SPDX-License-Identifier = "Apache-2.0"
